test/data/syntax-errors/no-comma-in-read.derp
nom x derp
nom y derp

